k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heroes-api-service
  labels:
    app: heroes-api
    component: backend
spec:
  selector:
    app: heroes-api
  ports:
  - port: 80
    targetPort: 3000
    name: http
  type: ClusterIP
